# GrewSight-AI

./: .env.example  AGENTIC_AI_CHALLENGE_SUBMISSION.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_CREWAI_AMP.md  LICENSE  NOTICE  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.bat  setup.sh  📦_READ_THIS_FIRST.md
api/: server.py
docs/: manual.docx
docs/mobile/: MOBILE-MOCKUPS-README.md  MOBILE-UI-DOCUMENTATION.md
examples/: basic_usage.py
mobile-app/: mobile-01-login.html  mobile-02-home.html  mobile-03-new-issue.html  mobile-04-chat.html  mobile-05-camera.html  mobile-06-resolved.html  mobile-mockup-showcase.html
src/crewsight/: crew.py  main.py
src/crewsight/config/: agents.yaml  tasks.yaml
src/crewsight/tools/: public_google_drive_processor.py
